# nlp_application

./: .flake8  Dockerfile  README.md  alembic.ini  docker-compose.yml  playground.py  pyproject.toml
.github/workflows/: build_image.yml  pr.yml  run_linters.yml  run_tests.yml
alembic/: env.py
alembic/versions/: 1_initial.py
client/: client.py  data_model.py  factories.py  jwt_factory.py
config/: logging.yaml
service/app/: __init__.py  __main__.py  auth.py  factories.py
service/app/routers/: health.py  requests.py
service/controller/: controller.py  errors.py  factory.py
service/data_model/: request.py  status.py
service/db/: __main__.py  config.py  errors.py  factories.py  migrations.py  schema.py
service/ml/: __init__.py  playground.py
service/ml/fill_in_pytorch/: loader.py
service/ml/fill_in_pytorch/predictor/: predictor.py
service/ml/fill_in_pytorch/preprocessor/: preprocessor.py
service/ml/pipelines/: factory.py  pipeline.py
service/ml/sentiment_analysis_pytorch/: loader.py
service/ml/sentiment_analysis_pytorch/predictor/: predictor.py
service/utils/: logs.py
tests/data_model/: factories.py
tests/functional/db/: test_db_operations.py  test_migrations.py
tests/unit/app/: test_auth.py
tests/unit/controller/: test_base_controller.py  test_factories.py
tests/unit/data_model/: test_query.py  test_request.py
