[tool.poetry]
name = "nlp-application"
version = "0.1.0"
description = ""
authors = ["ioanna123 <ioannapolyxronou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jwt = "^1.3.1"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
fastapi-pagination = "^0.12.26"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
transformers = "4.44.2"
torch = "2.4.0"
psycopg2 = "^2.9.9"
aiounittest = "^1.4.2"
requests = "^2.32.3"
httpx = "^0.27.2"
pyjwt = "^2.9.0"

[tool.poetry.group.tests.dependencies]
factory-boy = "3.2.0"
"testing.postgresql" = "1.3.0"
mock = "5.1.0"
pytest = "6.2.5"
pytest-order = "1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

